# fg-anim-editor

./: Cargo.toml  test.anim
assets/sprites/: player.png~
src/: main.rs  ui.rs
