[package]
name = "fg-anim-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bevy_prototype_lyon = "0.8"
rfd = "0.11"
image = "0.24"
futures = "0.3"
base64 = "0.21"
